# example-open-bandit-pipeline

./: README.md  pyproject.toml
data/open_bandit_dataset/: README  VERSION
notebooks/: example.ipynb  fashion_items.ipynb  synthetic_bandit_dataset.ipynb
