[tool.poetry]
name = "example-open-bandit-pipeline"
version = "0.1.0"
description = ""
authors = ["masatoomori <23582786+masatoomori@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "example_open_bandit_pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
